@@ -115,7 +115,7 @@ public class SqlTimeValueFactoryTest extends CommonAsserts {
     @Test
     public void testCreateFromDouble() {
         assertThrows(DataConversionException.class, "Unsupported conversion from DOUBLE to java.sql.Time", () -> {
-            SqlTimeValueFactoryTest.this.vf.createFromDouble(new Double(2018));
+            SqlTimeValueFactoryTest.this.vf.createFromDouble(Double.valueOf(2018));
             return null;
         });
     }
